# motor-simulacion-propagacion-2D

./: .gitignore  CMakeLists.txt  README.md  examples.sh
api/: fire_simulation_api.py
godot/: INTEGRATION_SUMMARY.md  PROJECT_SETUP.md  README.md
godot/grid-2d/: FireGridRenderer.gd  FireGridRenderer.gd.uid  FireSimulationBridge.gd  FireSimulationBridge.gd.uid  FireSimulationController.gd  FireSimulationController.gd.uid  FireSimulationUI.gd  FireSimulationUI.gd.uid  SimpleExample.gd  SimpleExample.gd.uid  fire_simulation.tscn  icon.svg.import  project.godot
scripts/: api_examples.py  demo.py  visualize.py
src/: fire_engine.cpp  fire_engine.hpp  main.cpp
